--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pure-eval==0.2.2
 Pygments==2.13.0
 pyparsing==3.0.9
 pyproj==3.4.0
+python>=3.8
 python-dateutil==2.8.2
 pytz==2022.6
 pywin32==305
