--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,8 @@ pytest==7.2.2
 pytest-cov==4.0.0
 python-dateutil==2.8.2
 pytz==2022.6
-pywin32==305
+pypiwin32>=223
+# pywin32==305
 pyzmq==24.0.1
 requests==2.28.1
 seaborn==0.12.2
