--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,59 @@
-alabaster==0.7.13
-asttokens==2.1.0
-attrs==22.2.0
-Babel==2.12.1
+asttokens==2.2.1
 backcall==0.2.0
-beautifulsoup4==4.11.2
+beautifulsoup4==4.12.2
 biopython==1.81
-certifi==2022.9.24
+bs4==0.0.1
+certifi==2022.12.7
 cftime==1.6.2
-charset-normalizer==2.1.1
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-codecov==2.1.12
+charset-normalizer==3.1.0
 colorama==0.4.6
+comm==0.1.3
 contourpy==1.0.7
-coverage==7.2.1
 cycler==0.11.0
-debugpy==1.6.3
+debugpy==1.6.7
 decorator==5.1.1
-dicttoxml==1.7.16
-docutils==0.18.1
-enasearch==0.2.0
-entrypoints==0.4
 et-xmlfile==1.1.0
-exceptiongroup==1.1.1
 executing==1.2.0
-fastjsonschema==2.16.3
-Fiona==1.9.1
-flake8==6.0.0
-fonttools==4.39.0
-geopandas==0.12.2
+fonttools==4.39.3
 idna==3.4
-imagesize==1.4.1
-iniconfig==2.0.0
-ipykernel==6.17.1
-ipython==8.6.0
-jedi==0.18.1
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==7.4.7
-jupyter_core==5.0.0
+ipykernel==6.22.0
+ipython==8.12.0
+jedi==0.18.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 kiwisolver==1.4.4
-LatLon23==1.0.7
 lxml==4.9.2
-MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
-mccabe==0.7.0
-munch==2.5.0
-nbformat==5.7.3
 nest-asyncio==1.5.6
-netCDF4==1.5.8
-numpy==1.23.4
-openpyxl==3.1.1
-packaging==21.3
-pandas==1.5.1
-pangaeapy==1.0.13
+netcdf==66.0.2
+netCDF4==1.6.3
+numpy==1.24.3
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.0.1
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==2.5.4
-plotly==5.13.1
-pluggy==1.0.0
-prompt-toolkit==3.0.32
-psutil==5.9.4
+Pillow==9.5.0
+platformdirs==3.2.0
+plotly==5.14.1
+prompt-toolkit==3.0.38
+psutil==5.9.5
 pure-eval==0.2.2
-pycodestyle==2.10.0
-pyflakes==3.0.1
-Pygments==2.13.0
+Pygments==2.15.1
 pyparsing==3.0.9
-pyrsistent==0.19.3
-pytest==7.2.2
-pytest-cov==4.0.0
 python-dateutil==2.8.2
-pytz==2022.6
-pypiwin32>=223
-# pywin32==305
-pyzmq==24.0.1
-requests==2.28.1
+pytz==2023.3
+pywin32==306
+pyzmq==25.0.2
+requests==2.28.2
 seaborn==0.12.2
-shapely==2.0.1
 six==1.16.0
-snowballstemmer==2.2.0
-soupsieve==2.4
-Sphinx==6.1.3
-sphinx-rtd-theme==1.2.0
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-stack-data==0.6.1
+soupsieve==2.4.1
+stack-data==0.6.2
 tenacity==8.2.2
-tomli==2.0.1
-tornado==6.2
-traitlets==5.5.0
-urllib3==1.26.12
-wcwidth==0.2.5
-xmltodict==0.13.0
+tornado==6.3.1
+traitlets==5.9.0
+tzdata==2023.3
+urllib3==1.26.15
+wcwidth==0.2.6
