--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.2.1
+attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 biopython==1.81
@@ -14,17 +15,20 @@ debugpy==1.6.7
 decorator==5.1.1
 et-xmlfile==1.1.0
 executing==1.2.0
+fastjsonschema==2.16.3
 fonttools==4.39.3
 idna==3.4
 ipykernel==6.22.0
 ipython==8.12.0
 jedi==0.18.2
+jsonschema==4.17.3
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+nbformat==5.8.0
 nest-asyncio==1.5.6
 netcdf==66.0.2
 netCDF4==1.6.3
@@ -32,6 +36,7 @@ numpy==1.24.3
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.1
+pangaeapy==1.0.14
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.5.0
@@ -42,9 +47,10 @@ psutil==5.9.5
 pure-eval==0.2.2
 Pygments==2.15.1
 pyparsing==3.0.9
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==306
+pywin32
 pyzmq==25.0.2
 requests==2.28.2
 seaborn==0.12.2
